--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ h1 {
     text-align: center;
     font-weight: bolder;
     color: #fff;
-    font-size: 55px;
+    font-size: 50px;
     margin-top: 30px;
     font-family: "Poppins", sans-serif;
     text-shadow: 3px 5px #000;
@@ -32,7 +32,7 @@ h1 {
     top: 50%;
     left: 50%;
     border-radius: 30px;
-    box-shadow: 0 15px 25px rgba(0,0,0,0.15) ;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.15);
 }
 
 .scores {
@@ -69,11 +69,13 @@ h1 {
     text-align: center;
 }
 
-.scores,.details{
-    font-family: 'Poppins',sans-serif;
+.scores,
+.details {
+    font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-size: 15px;
 }
+
 #result {
     width: 180px;
     padding: 10px 0;
@@ -81,27 +83,46 @@ h1 {
     font-weight: 600;
     letter-spacing: .5px;
 }
+
 #user_choice,
-#computer_choice{
+#computer_choice {
     font-weight: 400;
     margin-bottom: 10px;
 }
-span{
+
+span {
     font-weight: 600;
 }
 
 @media (max-width: 670px) {
     h1 {
-        font-size: 50px;
+        font-size: 2rem;
         margin: 0;
-    }.container {
+    }
+
+    .container {
         margin-top: 60px;
+        min-width: 350px;
+    }
+
+    .weapons button {
+        font-size: 50px;
+        height: 80px;
+        width: 100px;
+    }
+
+    .weapons button:nth-child(2) 
+    {
+        margin: 0 10px;
     }
 }
+
 @media (max-width: 1200px) {
     h1 {
         font-size: 50px;
-    }.container {
+    }
+
+    .container {
         margin-top: 60px;
     }
 }
